--- a/membros.html
+++ b/membros.html
@@ -35,7 +35,7 @@
         <a href="dashboard.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm">
           <i data-lucide="house" class="w-5 h-5"></i> Dashboard
         </a>
-        <a href="members.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
+        <a href="membros.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
           <i data-lucide="users" class="w-5 h-5"></i> Membros
         </a>
         <!-- Menus apenas para Líder -->
