--- a/dashboard.html
+++ b/dashboard.html
@@ -115,7 +115,7 @@
   </div>
 
   <script type="module">
-    import { checkAuth, setupSidebar, initIcons, logout, db } from './logic.js';
+    import { checkAuth, setupSidebar, initIcons, logout, db, consumeLoginToasts } from './logic.js';
     import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     checkAuth().then(async (user) => {
@@ -123,7 +123,8 @@
       setupSidebar();
       document.getElementById('btn-logout').onclick = logout;
       loadDashboard();
-    });
+      consumeLoginToasts();
+});
 
     async function loadDashboard() {
       try {
