--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -6,77 +6,118 @@
   <title>Admin - Guilda HUB</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
+  <script>
+    tailwind.config = { theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857'} } } } }
+  </script>
+  <link rel="stylesheet" href="./style.css" />
 </head>
-<body class="bg-gray-50 flex text-gray-800 font-sans">
+<body class="bg-gray-50/80">
 
-  <div class="lg:hidden fixed top-4 left-4 z-50">
-    <button id="menu-btn" class="bg-white p-2 rounded-lg shadow text-emerald-600"><i data-lucide="menu"></i></button>
+  <div class="flex min-h-screen">
+    <!-- Sidebar Overlay Mobile -->
+    <div id="sidebar-overlay" class="fixed inset-0 bg-black/30 z-40 hidden lg:hidden"></div>
+
+    <!-- Sidebar (igual as outras telas) -->
+    <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
+      <div class="flex items-center justify-between p-5 border-b border-gray-100">
+        <div class="flex items-center gap-3">
+          <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200 text-white">
+            <i data-lucide="shield" class="w-5 h-5"></i>
+          </div>
+          <div>
+            <h1 class="font-bold text-gray-900 text-lg leading-tight">Guilda e eventos</h1>
+            <p class="text-xs text-gray-400">Painel Admin</p>
+          </div>
+        </div>
+      </div>
+
+      <nav class="p-4 space-y-1">
+        <a href="dashboard.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
+          <i data-lucide="house" class="w-5 h-5"></i> Dashboard
+        </a>
+        <a href="membros.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
+          <i data-lucide="users" class="w-5 h-5"></i> Membros
+        </a>
+        <a href="camp.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
+          <i data-lucide="trophy" class="w-5 h-5"></i> Campeonato
+        </a>
+        <a href="admin.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm">
+          <i data-lucide="settings" class="w-5 h-5"></i> Admin
+        </a>
+      </nav>
+
+      <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
+        <div class="flex items-center justify-between px-3 py-2">
+          <div class="flex items-center gap-3">
+            <div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
+            <div>
+              <p id="user-role" class="text-sm font-medium text-gray-700">Carregando...</p>
+              <p id="user-email" class="text-xs text-gray-400 truncate w-24">...</p>
+            </div>
+          </div>
+          <button id="btn-logout" class="p-2 text-gray-400 hover:text-red-500 transition-colors" title="Sair">
+            <i data-lucide="log-out" class="w-4 h-4"></i>
+          </button>
+        </div>
+      </div>
+    </aside>
+
+    <!-- Conteúdo Principal -->
+    <main class="flex-1 min-w-0">
+      <header class="sticky top-0 z-30 bg-white/80 backdrop-blur-lg border-b border-gray-100">
+        <div class="flex items-center gap-3 px-4 py-3 sm:px-6">
+          <button id="mobile-menu-btn" class="lg:hidden p-2 rounded-xl hover:bg-gray-100 text-gray-500">
+            <i data-lucide="menu" class="w-5 h-5"></i>
+          </button>
+          <div class="min-w-0">
+            <h1 class="text-lg font-semibold text-gray-900">Configurações de Acesso</h1>
+            <p class="text-xs text-gray-400 mt-0.5">Somente Líder pode gerenciar permissões.</p>
+          </div>
+        </div>
+      </header>
+
+      <div class="p-4 sm:p-6 max-w-5xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <div class="bg-white p-6 rounded-2xl border border-gray-100 shadow-sm">
+            <div class="flex justify-between items-center mb-4">
+              <h3 class="font-bold text-gray-900 flex items-center gap-2">
+                <i data-lucide="crown" class="w-5 h-5 text-yellow-500"></i>
+                Administradores
+              </h3>
+              <button id="btn-add-admin" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
+            </div>
+            <p class="text-xs text-gray-400 mb-4">Acesso ao Dashboard e administração de membros.</p>
+            <ul id="list-admins" class="space-y-2"></ul>
+          </div>
+
+          <div class="bg-white p-6 rounded-2xl border border-gray-100 shadow-sm">
+            <div class="flex justify-between items-center mb-4">
+              <h3 class="font-bold text-gray-900 flex items-center gap-2">
+                <i data-lucide="medal" class="w-5 h-5 text-blue-500"></i>
+                Líderes
+              </h3>
+              <button id="btn-add-leader" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
+            </div>
+            <p class="text-xs text-gray-400 mb-4">Acesso total ao sistema.</p>
+            <ul id="list-leaders" class="space-y-2"></ul>
+          </div>
+        </div>
+      </div>
+    </main>
   </div>
 
-  <aside id="sidebar" class="w-64 bg-white border-r h-screen fixed -translate-x-full lg:translate-x-0 transition-transform z-40">
-    <div class="p-6 flex items-center gap-3 border-b">
-      <div class="bg-emerald-500 text-white p-2 rounded-lg"><i data-lucide="shield"></i></div>
-      <span class="font-bold">Painel Guilda</span>
-    </div>
-
-    <nav class="p-4 space-y-2">
-      <a href="dashboard.html" class="flex gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-xl transition"><i data-lucide="layout-dashboard"></i> Dashboard</a>
-      <a href="membros.html" class="flex gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-xl transition"><i data-lucide="users"></i> Membros</a>
-      <a href="camp.html" class="flex gap-3 px-4 py-3 text-gray-500 hover:bg-gray-100 rounded-xl transition"><i data-lucide="swords"></i> Campeonato</a>
-      <a href="admin.html" class="flex gap-3 px-4 py-3 bg-emerald-50 text-emerald-700 rounded-xl font-medium"><i data-lucide="settings"></i> Admin</a>
-
-      <button id="btn-logout" class="w-full flex gap-3 px-4 py-3 text-red-500 hover:bg-red-50 rounded-xl mt-10"><i data-lucide="log-out"></i> Sair</button>
-    </nav>
-  </aside>
-
-  <main class="flex-1 lg:ml-64 min-h-screen p-6">
-    <header class="bg-white/80 backdrop-blur border-b p-4 mb-6 rounded-2xl sticky top-0 z-30">
-      <h1 class="font-bold text-lg">Configurações de Acesso</h1>
-      <p class="text-xs text-gray-400 mt-1">Somente Líder pode gerenciar permissões.</p>
-    </header>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
-
-      <div class="bg-white p-6 rounded-2xl border shadow-sm">
-        <div class="flex justify-between items-center mb-4">
-          <h3 class="font-bold text-gray-900 flex gap-2"><i data-lucide="crown" class="text-yellow-500"></i> Administradores</h3>
-          <button id="btn-add-admin" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
-        </div>
-        <p class="text-xs text-gray-400 mb-4">Acesso ao Dashboard e administração de membros.</p>
-        <ul id="list-admins" class="space-y-2"></ul>
-      </div>
-
-      <div class="bg-white p-6 rounded-2xl border shadow-sm">
-        <div class="flex justify-between items-center mb-4">
-          <h3 class="font-bold text-gray-900 flex gap-2"><i data-lucide="medal" class="text-blue-500"></i> Líderes</h3>
-          <button id="btn-add-leader" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
-        </div>
-        <p class="text-xs text-gray-400 mb-4">Acesso total ao sistema.</p>
-        <ul id="list-leaders" class="space-y-2"></ul>
-      </div>
-
-    </div>
-  </main>
-
   <script type="module">
-    import { checkAuth, showToast, logout, auth, db, ensureUserAccount, initIcons } from "./logic.js";
+    import { checkAuth, setupSidebar, initIcons, showToast, logout, auth, db, ensureUserAccount } from "./logic.js";
     import { doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
     import { fetchSignInMethodsForEmail } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-
-    // Mobile Menu
-    document.getElementById('menu-btn')?.addEventListener('click', () => {
-      document.getElementById('sidebar')?.classList.toggle('-translate-x-full');
-    });
 
     document.getElementById('btn-logout')?.addEventListener('click', logout);
 
     let securityData = { admins: [], leaders: [] };
 
-    // Protege a página (somente Líder)
     const user = await checkAuth();
-    if (!user) {
-      // checkAuth já redireciona
-    } else {
+    if (user) {
+      setupSidebar();
       await load();
       initIcons();
     }
@@ -110,7 +151,7 @@
         li.className = "flex justify-between items-center bg-gray-50 p-3 rounded-xl text-sm border";
         li.innerHTML = `
           <span class="truncate pr-2">${escapeHtml(email)}</span>
-          <button class="btn-remove text-red-400 hover:text-red-600" data-type="${type}" data-email="${escapeHtml(email)}">
+          <button class="btn-remove text-red-400 hover:text-red-600" data-type="${type}" data-email="${escapeHtml(email)}" title="Remover">
             <i data-lucide="trash-2" class="w-4 h-4"></i>
           </button>
         `;
@@ -125,7 +166,7 @@
         });
       });
 
-      try { lucide.createIcons(); } catch (_) {}
+      initIcons();
     }
 
     function escapeHtml(str = "") {
@@ -179,7 +220,6 @@
         await saveSecurity();
 
         showToast('success', created ? 'Conta criada e acesso liberado.' : 'Acesso liberado.');
-
       } catch (e) {
         console.error(e);
         showToast('error', e?.message || 'Erro ao adicionar acesso.');
@@ -195,7 +235,6 @@
         await saveSecurity();
 
         showToast('success', 'Acesso removido.');
-
       } catch (e) {
         console.error(e);
         showToast('error', e?.message || 'Erro ao remover acesso.');
