--- a/ajustes.html
+++ b/ajustes.html
@@ -72,7 +72,7 @@
   <header class="sticky top-0 z-40 bg-white/80 backdrop-blur border-b border-gray-200">
     <div class="flex items-center justify-between p-4 lg:p-6">
       <div class="flex items-center gap-3">
-        <button id="sidebar-open" class="lg:hidden inline-flex items-center justify-center w-10 h-10 rounded-xl border border-gray-200 bg-white">
+        <button id="mobile-menu-btn" class="lg:hidden p-2 rounded-xl hover:bg-gray-100 text-gray-500">
           <i data-lucide="menu" class="w-5 h-5"></i>
         </button>
         <div>
@@ -209,7 +209,7 @@
           if (!canEditTag) return showToast('error', 'Sem permissão para alterar a tag.');
           const tagPrefix = (document.getElementById('tag-prefix').value || '').trim();
           if (!tagPrefix.length) return showToast('error', 'Informe uma tag válida.');
-          const ref = doc(db, 'ajustes', 'geral');
+          const ref = doc(db, 'guildConfig', 'security');
           await setDoc(ref, { tagPrefix }, { merge: true });
           showToast('success', 'Tag atualizada com sucesso.');
         } catch (e) {
@@ -222,7 +222,7 @@
       document.getElementById('save-color').addEventListener('click', async () => {
         try {
           if (!canEditColor) return showToast('error', 'Somente Líder pode alterar a cor.');
-          const ref = doc(db, 'ajustes', 'geral');
+          const ref = doc(db, 'guildConfig', 'security');
           await setDoc(ref, { accent: selectedColor }, { merge: true });
           showToast('success', 'Cor aplicada para todos.');
           // aplica localmente na hora
